[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 48",
  "wheel >= 0.29.0",
  "setuptools_scm[toml] >= 7",
  "setuptools_scm_git_archive",
]

[project]
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "src/pdfunlock/_version.py"

# see https://github.com/psf/black/issues/683 for why this can't be in setup.cfg
[tool.black]
line-length = 110
target-version = ['py39', 'py310', 'py311']
