[metadata]
name = pdfunlock
author = Andrew Powers-Holmes
author_email = aholmes@omnom.net
maintainer = Andrew Powers-Holmes
maintainer_email = aholmes@omnom.net
license = GPLv3
license_files =
    COPYING
    LICENSE.md
project_urls =
    Documentation = https://github.com/neggles/pdfunlock/wiki
    Source = https://github.com/neggles/pdfunlock
    Tracker = https://github.com/neggles/pdfunlock/issues

[options]
python_requires = >=3.9
zip_safe = False
packages = find:
platforms = any
package_dir =
    =src
py_modules =
    pdfunlock
include_package_data = True
install_requires =
    typer >= 0.6.1, < 0.8.0
    colorama >= 0.4.3
    shellingham >= 1.3.0, < 2.0.0
    rich >= 10.11.0, < 14.0.0
    pikepdf >= 7.1.0, < 8.0.0
setup_requires =
    setuptools-scm >= 7.0.0

[options.packages.find]
where = src

[options.package_data]
    * = *.txt, *.md

[options.extras_require]
dev =
    black >= 22.3.0
    flake8 >= 4.0.1
    setuptools-scm >= 7.0.0
    mypy >= 0.981
    build >= 0.10.0
    twine >= 4.0.2

[options.entry_points]
console_scripts =
    pdfunlock = pdfunlock.app:app

# see https://github.com/PyCQA/flake8/issues/234#issuecomment-812800722 for why this can't be in pyproject.toml
[flake8]
max-line-length = 110
extend-ignore =
    # these are annoying during development but should be enabled later
    F401 # module imported but unused
    F841 # local variable is assigned to but never used
    # black automatically fixes this
    E501 # line too long
    # black breaks these two rules:
    E203 # whitespace before :
    W503 # line break before binary operator
extend-exclude =
    .venv
